# Patchward

./: .bandit  .coverage  .dockerignore  .env.example  .gitignore  README.md  fly.toml  patchward.toml.example  pyproject.toml  repomend.toml
.strategy/: STRATEGY.md
docker/: entrypoint.sh  scanner.Dockerfile  webhook.Dockerfile
docs/: intake_phase1.md  intake_phase2.md  intake_phase3.md  intake_phase3_addendum_p3-03.md  intake_phase4.md  intake_phase5.md  intake_phase6.md  intake_phase7.md  user_guide.md
memory/: BACKLOG.md  BUILD_PLAN_2026-07-10.md  CONTEXT.md  NEXT_SESSION_START.md  SESSION_CLOSE_2026-07-15.md  SESSION_CLOSE_2026-07-16.md  SESSION_CLOSE_2026-07-21.md  SESSION_CLOSE_2026-07-22.md  SESSION_CLOSE_2026-07-23.md  SESSION_STRATEGY_2026-07-13.md  STATE.md  architectural_decisions.md  deep_research_prompt_org_buildplan.md  intake_phase0.md  project_open_tasks.md  project_session_log.md
reports/: keystone_report_phase0.md  keystone_report_phase1.md  keystone_report_phase2.md  keystone_report_phase3.md  keystone_report_phase4.md  keystone_report_phase5.md  keystone_report_phase6.md  keystone_report_phase7.md
runs/: session_20260622T214706Z.json  session_20260622T224226Z.json  session_20260622T225149Z.json  session_20260622T225636Z.json  session_20260622T225655Z.json  session_20260623T123418Z.json  session_20260623T132217Z.json  session_20260623T133206Z.json  session_20260623T133353Z.json  session_20260623T134313Z.json  session_20260623T134931Z.json  session_20260623T135322Z.json  session_20260623T135839Z.json  session_20260623T140140Z.json  session_20260623T140429Z.json  session_20260623T212455Z.json  state.db  (+8 more)
(+71 files in other folders)
