[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchward"
version = "0.1.0"
description = "Local-first multi-repo security agent"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[project.scripts]
patchward = "patchward.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=patchward --cov-report=term-missing --cov-fail-under=80 -m 'not integration'"
# TestRunner is a legitimate enum name, not a test class
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker running and/or network access — excluded from default CI run",
    "red_team: Red-team injection tests. 100% pass required for Phase 3 gate.",
    "asyncio: async test (pytest-asyncio)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/patchward"]

[tool.coverage.run]
source = ["src/patchward"]
# AC-08 scope: config loader + DB layer only.
# cli, scanner, tracing require live I/O (Semgrep, SQLite file, Langfuse) — integration-tested in Phase 1.
omit = [
    "src/patchward/cli.py",
    "src/patchward/scanner.py",
    "src/patchward/tracing.py",
    "src/patchward/subagent.py",
]
